# dasProfile

./: .gitignore  CMakeLists.txt  README.md  config.das  log_filter.das  main.das  profile_results.json  test_profile.cpp  test_profile.h  test_profile_aot_module.cpp  update_readme_benchmarks.py
history/: 5-11-2026-M1-MAC.json  5-12-2026-M1.json
tests/: dict.das  exp.das  f2i.das  f2s.das  fib_loop.das  fib_recursive.das  mandelbrot.das  native.das  nbodies.das  particles.das  primes.das  queen.das  sha256.das  spectral-norm.das  table-sort.das  tree.das
tests/cs/: dasprofile_bench.csproj  dict.cs  exp.cs  f2i.cs  f2s.cs  fib_loop.cs  fib_recursive.cs  mandelbrot.cs  native.cs  nbodies.cs  particles.cs  primes.cs  queen.cs  sha256.cs  spectral-norm.cs  table-sort.cs  tree.cs
tests/cs/addOne/: addOne.c
tests/js/: dict.js  exp.js  f2i.js  f2s.js  fib_loop.js  fib_recursive.js  mandelbrot.js  nbodies.js  particles.js  primes.js  queen.js  sha256.js  spectral-norm.js  table-sort.js  tree.js
tests/lua/: dict.lua  exp.lua  f2i.lua  f2s.lua  fib_loop.lua  fib_recursive.lua  mandelbrot.lua  native.lua  nbodies.lua  particles.lua  primes.lua  profile.lua  profile_try_catch.lua  queen.lua  sha256.lua  sha256_luajit.lua  spectral-norm.lua  table-sort.lua  tree.lua
tests/luau/: dict.luau  exp.luau  f2i.luau  f2s.luau  fib_loop.luau  fib_recursive.luau  mandelbrot.luau  particles.luau  primes.luau  queen.luau  sha256.luau  table-sort.luau
tests/squirrel/: dict.nut  exp.nut  f2i.nut  f2s.nut  fib_loop.nut  fib_recursive.nut  mandelbrot.nut  native.nut  particles.nut  particles_array.nut  primes.nut  profile_try_catch.nut  queen.nut  sha256.nut  table-sort.nut  tree.nut
